fixed menu collapse

--- a/interswellar/static/css/about.css
+++ b/interswellar/static/css/about.css
@@ -72,4 +72,5 @@ body {
     font-size: 300%;
     color: #FFF;
     padding: 20px;
+    background-color: black;
 }
